Tip 布局系统重构：padding/shadow/badge/scale